--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,7 @@ jobs:
       - run:
           name: Creating Dummy Artifacts
           command: |
-            echo "my artifact file" > /tmp/artifact-1;
+            echo "my artifact file" > /tmp/artifact-1.txt;
             mkdir /tmp/artifacts;
             echo "my artifact files in a dir" > /tmp/artifacts/artifact-2;
 
@@ -53,3 +53,6 @@ jobs:
 
       - store_artifacts:
           path: /tmp/artifacts
+
+      - store_artifacts:
+          path: demofile2.txt
