test push file to github

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,6 +52,6 @@ jobs:
           command: |
             git config user.email "areoflo@gmail.com"
             git config user.name "CircleCI Job"
-            git checkout master
+            git checkout circleci-project-setup
             git commit --allow-empty -am "Automatic commit from CircleCI [skip ci]"
-            git push origin master
+            git push origin circleci-project-setup
