--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,11 +39,10 @@ jobs:
           # pip-dependency-file: test-requirements.txt  # if you have a different name for your requirements file, maybe one that combines your runtime and test requirements.
 
       - run:
-          command:
-            wget http://download.gna.org/wkhtmltopdf/0.12/0.12.3/wkhtmltox-0.12.3_linux-generic-amd64.tar.xz
-            tar xvf wkhtmltox-0.12.3_linux-generic-amd64.tar.xz
-            sudo mv wkhtmltox/bin/wkhtmltopdf /usr/local/bin/wkhtmltopdf
-            sudo chmod +x /usr/local/bin/wkhtmltopdf
+          command: |
+            wget https://github.com/wkhtmltopdf/packaging/releases/download/0.12.6-1/wkhtmltox_0.12.6-1.bionic_amd64.deb
+            ls
+            sudo apt install wkhtmltox_0.12.6-1.bionic_amd64.deb
 
       - run:
           name: Run tests
