--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,8 +42,8 @@ jobs:
       - run:
           name: Run tests
           # This assumes pytest is installed via the install-package step above
-          # command: pytest -s
-          command: ./Tests/commit_check.sh
+          command: pytest -s
+          # command: ./Tests/commit_check.sh
 
       - store_artifacts:
           name: Log errors into file
