--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,25 +38,24 @@ jobs:
           # app-dir: ~/project/package-directory/  # If you're requirements.txt isn't in the root directory.
           # pip-dependency-file: test-requirements.txt  # if you have a different name for your requirements file, maybe one that combines your runtime and test requirements.
 
-
       - run:
           name: Run tests
           # This assumes pytest is installed via the install-package step above
           command: pytest -s
           # command: ./Tests/commit_check.sh
 
-      - store_artifacts:
-          name: Log errors into file
-          path: errors.txt
+      # - store_artifacts:
+      #     name: Log errors into file
+      #     path: errors.txt
 
-      - run:
-          name: Commit to GitHub
-          command: |
-            ls
-            git config user.email "areoflo@gmail.com"
-            git config user.name "Fehu4"
-            git checkout circleci-project-setup
-            git add "errors.txt"
-            git add "dokumentacja.html"
-            git commit --allow-empty -am "Automatic commit from CircleCI [skip ci]"
-            git push origin circleci-project-setup
+      # - run:
+      #     name: Commit to GitHub
+      #     command: |
+      #       ls
+      #       git config user.email "areoflo@gmail.com"
+      #       git config user.name "Fehu4"
+      #       git checkout circleci-project-setup
+      #       git add "errors.txt"
+      #       git add "dokumentacja.html"
+      #       git commit --allow-empty -am "Automatic commit from CircleCI [skip ci]"
+      #       git push origin circleci-project-setup
