--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -57,7 +57,7 @@ jobs:
             git config user.email "areoflo@gmail.com"
             git config user.name "Fehu4"
             git checkout circleci-project-setup
-            git add "errors.txt"
+            git add logs
             git add "dokumentacja.html"
             git commit --allow-empty -am "Automatic commit from CircleCI [skip ci]"
             git push origin circleci-project-setup
