--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -57,6 +57,6 @@ jobs:
             git config user.name "Fehu4"
             git checkout circleci-project-setup
             git add logs
-            git add .
+            git add Model
             git commit --allow-empty -am "Automatic commit from CircleCI [skip ci]"
             git push origin circleci-project-setup
