--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -61,8 +61,11 @@ jobs:
             git add Model
             git commit --allow-empty -am "Automatic commit from CircleCI [skip ci]"
             git push origin circleci-project-setup
-      - merge:
+      - checkout:
+        name: Checkout main
+        command:
+          git checkout main
+      -merge:
         name: Merge files to main
-        command: |
-        git checkout main
-        git merge circleci-project-setup
+        command: 
+          git merge circleci-project-setup
