--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -62,14 +62,14 @@ jobs:
             git commit --allow-empty -am "Automatic commit from CircleCI [skip ci]"
             git push origin circleci-project-setup
 
-      - checkout:
+      - run:
         name: Checkout main
         command: git checkout main
 
-      - merge:
+      - run:
         name: Merge files to main
         command: git merge circleci-project-setup
 
-      - push:
+      - run:
         name: Push on main
         command: git push
